sonar comments